--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "browserify-middleware": "^7.1.0",
     "d3": "^4.4.4",
     "express": "^4.14.0",
-    "request": "^2.79.0",
-    "tingodb": "^0.5.1"
+    "nedb": "^1.8.0",
+    "request": "^2.79.0"
   },
   "private": "true",
-  "optionalDependencies": {
-    "mongodb": "^2.2.22"
-  }
+  "optionalDependencies": {}
 }
