Use forever to keep the aggregator running until some limit.

--- a/config.json
+++ b/config.json
@@ -1,7 +1,5 @@
 {
   "url": "mongodb://localhost:27017/sauertracker",
-  "auth": {
-    "user": "",
-    "password": ""
-  }
+  "port": 8080,
+  "limit": 34000
 }
